# rickson

./: CLAUDE.md  README.md  requirements.txt
.claude/commands/: plan-omniverse-bootstrap.md  run-kit.md  test-gpu-kernels.md
app/: rickson.dev.kit  rickson.kit
data/stages/: training_gym.usda
docs/: FUTURE_WORK.md  architecture.md  evm_explained.md  phase2_features.md  quickstart.md
exts/zs.3dgs/config/: extension.toml
exts/zs.3dgs/zs/gaussian_splats/: __init__.py  gym_prior.py  splat_loader.py  usd_integration.py
exts/zs.core/config/: extension.toml
exts/zs.core/zs/core/: __init__.py  event_log.py  insights_engine.py  opponent_analysis.py  privacy.py  timeline_replay.py
exts/zs.evm/config/: extension.toml
exts/zs.evm/zs/evm/: __init__.py  video_input.py
exts/zs.evm/zs/evm/core/: __init__.py  breath_estimator.py  evm_pipeline.py  pyramid.py  temporal_filter.py
exts/zs.evm/zs/evm/cuda/: CMakeLists.txt  __init__.py  gpu_pipeline.py
exts/zs.evm/zs/evm/cuda/kernels/: pyramid.cu  temporal_filter.cu
exts/zs.evm/zs/evm/gpu/: __init__.py  evm_gpu.py
exts/zs.opponent/config/: extension.toml
exts/zs.opponent/zs/opponent/: __init__.py  feature_extractor.py  training_games.py
exts/zs.pose/config/: extension.toml
exts/zs.pose/zs/pose/: __init__.py  balance_analyzer.py  pose_estimator.py
exts/zs.ui/config/: extension.toml
exts/zs.ui/zs/ui/: __init__.py  ui_panel.py
scripts/: launch_kit.sh  link_extensions.sh
tests/: test_full_pipeline.py  test_gpu_kernels.py  test_integration_future_work.py  test_phase2_features.py
(+6 files in other folders)
